# hypre_external_project

./: .gitignore  CMakeLists.txt
cmake/: CMakeBasics.cmake  ExpandBaseOptions.cmake  ExpandCudaOptions.cmake  ExpandPackageOptions.cmake  SetupOptions.cmake
install/: .gitignore
